# cultrual-items-wikidata

./: .gitignore  README.md  data_pipeline.ipynb  pyproject.toml
extraction/annexes/: wikidata_queries.txt
src/extraction/annexes/: extract_viaf_information.py  raw_seed_to_db.py  test.ipynb
